# Arabella_Beta

./: README.md  psutil.py  pyproject.toml  requirements.txt  yaml.py
aiosqlite/: __init__.py
chromadb/: __init__.py  client.py
chromadb/utils/: embedding_functions.py
core_framework/: __init__.py  constants.py  exceptions.py
core_framework/config/: __init__.py  defaults.py  manager.py  schema.py
core_framework/events/: __init__.py  bus.py  priorities.py  schema.py
core_framework/logging/: __init__.py  formatters.py  setup.py
core_framework/platform/: __init__.py  base.py  detector.py  linux.py  macos.py  windows.py
core_framework/registry/: __init__.py  component.py  lifecycle.py
memory_system/: __init__.py  archival.py  consolidation.py  contradiction.py  episodic.py  models.py  semantic.py  thoughtlog.py
memory_system/tests/: test_consolidation.py  test_contradiction.py  test_episodic.py  test_semantic.py
observability/: __init__.py  collector.py  metrics.py
observability/dashboards/: __init__.py  provisioner.py
observability/dashboards/definitions/: agentic.json  emotional.json  intelligence.json  memory.json  vitals.json
observability/tests/: test_observability.py
prometheus_client/: __init__.py
pydantic/: __init__.py
pydantic_settings/: __init__.py
structlog/: __init__.py  _base.py  contextvars.py  dev.py  processors.py  stdlib.py
tests/: conftest.py  test_component_state.py  test_config_manager.py  test_event_bus.py  test_lifecycle_manager.py  test_platform_detector.py
