[project]
name = "core_framework"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "PyYAML>=6.0",
    "structlog>=23.0",
    "pyzmq>=25.0",
    "psutil>=5.9",
    "aiofiles>=23.0",
    "rich>=13.0",
    "watchdog>=3.0",
    "typing-extensions>=4.7",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["core_framework*"]
